spade-tests/src/snapshots/spade_tests__typeinference__type_params_are_accessible_in_units.snap
---
source: spade-tests/src/typeinference.rs
---
fn produce_something<T>() -> T __builtin__

fn test<T>() {

    let a: T = produce_something::<bool>();
}

fn main() {
    test::<int<9>>()
}


error: Expected type bool, got int<9>
  ┌─ testinput:3:1
  │  
3 │ ╭ fn test<T>() {
4 │ │ 
5 │ │     let a: T = produce_something::<bool>();
  │ │                                    ---- Type bool inferred here
6 │ │ }
  │ ╰─^ Expected bool
  ·  
9 │       test::<int<9>>()
  │              ----- Type int<9> inferred here
  │  
  = note: Expected: bool
               Got: int<9>
help: Unit instantiated here
  ┌─ testinput:9:5
  │
9 │     test::<int<9>>()
  │     ^^^^^^^^^^^^^^^^ Unit instantiated here
  │


